--- a/HTML&CSS/16_layout_BoxModel.html
+++ b/HTML&CSS/16_layout_BoxModel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p class="p">Lorem ipsum dolor sit amet.</p>
+    <p class="p">Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
