learn css layout floating and how to clear floats

--- a/HTML&CSS/19_layout_measurementUnit.html
+++ b/HTML&CSS/19_layout_measurementUnit.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-    <div class="measurement-box"></div>
+    <div class="measurement-box">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis eaque voluptas facilis soluta recusandae itaque. Ducimus doloremque veritatis quod placeat fugit, modi quasi voluptates assumenda nihil! Reprehenderit sit aspernatur nihil ad laudantium autem adipisci, harum minus perspiciatis aut numquam assumenda. Recusandae dicta, cupiditate deserunt natus laboriosam laudantium doloribus voluptatem! Accusantium?</p>
+    </div>
 </body>
 </html>
