--- a/HTML&CSS/27_typography_font.html
+++ b/HTML&CSS/27_typography_font.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/typography.css">
-</head>
-<body>
-    <section>
-        <h1>Heading</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos nemo voluptatem omnis quas repellat ipsum voluptatibus. Ipsa quas impedit, aperiam perspiciatis maiores laborum velit officiis enim magnam, est ut rem corrupti quia numquam labore! Mollitia similique, tempora neque eaque ipsum praesentium nesciunt consectetur incidunt totam accusamus, quaerat delectus! Fuga, consequatur dolores facere suscipit distinctio at beatae maxime commodi facilis debitis eius delectus repudiandae non voluptas recusandae nulla quam eveniet animi quod quos praesentium. Necessitatibus voluptatum cum vitae minima quas suscipit, saepe laudantium nesciunt in dolore maxime, totam excepturi nostrum commodi consequuntur neque corporis voluptate! Ut a aliquid minus deserunt exercitationem.</p>
-        <a href="">link</a>
-    </section>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="css/typography.css" />
+	</head>
+	<body>
+		<h1>Heading</h1>
+		<p
+			>A B C D E F G Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos nemo
+			voluptatem omnis quas repellat ipsum voluptatibus. Ipsa quas impedit,
+			aperiam perspiciatis maiores laborum velit officiis enim magnam, est ut
+			rem corrupti quia numquam labore! Mollitia similique, tempora neque eaque
+			ipsum praesentium nesciunt consectetur incidunt totam accusamus, quaerat
+			delectus! Fuga, consequatur dolores facere suscipit distinctio at beatae
+			maxime commodi facilis debitis eius delectus repudiandae non voluptas
+			recusandae nulla quam eveniet animi quod quos praesentium. Necessitatibus
+			voluptatum cum vitae minima quas suscipit, saepe laudantium nesciunt in
+			dolore maxime, totam excepturi nostrum commodi consequuntur neque corporis
+			voluptate! Ut a aliquid minus deserunt exercitationem.</p
+		>
+		<p
+			>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ratione
+			magni saepe praesentium neque quibusdam iure officia minus mollitia
+			voluptatibus, officiis sequi eius provident cupiditate nobis sint eaque
+			fugit fugiat ut nesciunt suscipit veniam! Iure, dicta esse dignissimos at
+			sapiente illum sequi quaerat maiores ducimus modi error, doloribus
+			nesciunt. Impedit.</p
+		>
+		<h1>Heading</h1>
+		<p
+			>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos nemo
+			voluptatem omnis quas repellat ipsum voluptatibus. Ipsa quas impedit,
+			aperiam perspiciatis maiores laborum velit officiis enim magnam, est ut
+			rem corrupti quia numquam labore! Mollitia similique, tempora neque eaque
+			ipsum praesentium nesciunt consectetur incidunt totam accusamus, quaerat
+			delectus! Fuga, consequatur dolores facere suscipit distinctio at beatae
+			maxime commodi facilis debitis eius delectus repudiandae non voluptas
+			recusandae nulla quam eveniet animi quod quos praesentium. Necessitatibus
+			voluptatum cum vitae minima quas suscipit, saepe laudantium nesciunt in
+			dolore maxime, totam excepturi nostrum commodi consequuntur neque corporis
+			voluptate! Ut a aliquid minus deserunt exercitationem.</p
+		>
+	</body>
 </html>
