--- a/HTML&CSS/03_entities.html
+++ b/HTML&CSS/03_entities.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p>I love to learn &lt;HTML&gt;! &copy; </p>
+  </head>
+  <body>
+    <p>I love to learn &lt;HTML&gt;! &copy;</p>
     <p>abcde&nbsp;fghijklmnopqr</p>
     <a href="https://dev.w3.org/html5/html-author/charref">THML Entities</a>
-</body>
+  </body>
 </html>
